force-app/main/default/objects/Event_Plan__c/Event_Plan__c.object-meta.xml
<CustomObject>
    <description>Represents individual events planned by Tech Mahindra</description>
    <label>Event Plan</label>
    <nameField>
        <displayFormat>EP-{0000}</displayFormat>
        <label>Event Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>