force-app/main/default/objects/Event_Plan__c/fields/Event_Budget__c.field-meta.xml
<CustomField>
    <fullName>Event_Budget__c</fullName>
    <description>The budget of the event.</description>
    <label>Event Budget</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>