force-app/main/default/objects/Event_Plan__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>The date and time of the event.</description>
    <label>Event Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>