force-app/main/default/objects/Event_Plan__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>The name of the event.</description>
    <label>Event Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>