force-app/main/default/objects/Event_Plan__c/fields/Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense__c</fullName>
    <description>The Roll-Up Summary field automatically calculates and stores the total sum of expenses 
associated with each event, providing insight into the event&apos;s financial status.</description>
    <label>Total Expense</label>
    <summarizedField>Event_Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Event_Expense__c.Event_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>