force-app/main/default/objects/Event_Plan__c/fields/Total_Tasks_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Tasks_Count__c</fullName>
    <description>The Roll-Up Summary field automatically calculates and stores the total count of tasks associated with each event.</description>
    <label>Total Tasks Count</label>
    <summaryForeignKey>Event_Task__c.Event_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>