force-app/main/default/objects/Event_Plan__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>DATEVALUE( Event_Date__c )  &lt;=   TODAY()</errorConditionFormula>
    <errorDisplayField>Event_Date__c</errorDisplayField>
    <errorMessage>Date should be greater than today&apos;s date</errorMessage>
</ValidationRule>